# rust-web-image-meta

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  README_ja.md
.github/workflows/: ci.yml  release.yml
examples/: estimate_demo.rs
scripts/: pre-commit.sh
src/: jpeg.rs  lib.rs  png.rs
tests/: jpeg_tests.rs  png_tests.rs
tests/test_data/: index.json
