[package]
name = "rust-image-meta"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for manipulating JPEG and PNG metadata"
license = "MIT"
repository = "https://github.com/yourusername/rust-image-meta"

[dependencies]
# For JPEG processing
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
kamadak-exif = "0.5"

# For PNG processing
png = "0.17"
crc32fast = "1.3"

# Error handling
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
