[package]
name = "web-image-meta"
version = "0.1.0"
edition = "2021"
authors = ["ideamans Inc."]
description = "A lightweight Rust library for manipulating JPEG and PNG metadata, optimized for web images"
readme = "README.md"
homepage = "https://github.com/ideamans/rust-web-image-meta"
repository = "https://github.com/ideamans/rust-web-image-meta"
license = "MIT"
keywords = ["jpeg", "png", "metadata", "exif", "image"]
categories = ["multimedia::images", "multimedia::encoding", "web-programming"]
exclude = ["tests/test_data/*"]

[dependencies]
# For JPEG processing
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
kamadak-exif = "0.5"

# For PNG processing
png = "0.17"
crc32fast = "1.3"

# Error handling
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
